--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "illuminate/console": "5.*",
         "illuminate/http": "5.*",
         "illuminate/pagination": "5.*",
-        "illuminate/support": "5.*",
+        "illuminate/support": "5.*"
     },
     "autoload": {
         "psr-4": {
